# nginx-manager

./: Cargo.toml  README.md  build.sh
src/: config.rs  host.rs  lib.rs  manifest.rs  mcp_client.rs  tools.rs
